	* Framework/PCProjectInspector.m
	* Modules/Editors/ProjectCenter/SyntaxDefinition.m
	* Modules/Editors/ProjectCenter/SyntaxHighlighter.m
	* Modules/Editors/ProjectCenter/TextPattern.m
	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
	  some more (unsigned) int -> NS(U)Integer transitions
	  and some shutup of clang compiler warnings

2013-02-09 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Framework/PCFileCreator.m
	* Framework/PCMakefileFactory.m
	* Framework/PCProjectBuilder.m
	* Framework/PCProjectLauncher.m
	* Framework/PCProjectManager.m
	* Framework/PCProject.m
	* Modules/Projects/Application/PCAppProject.m
	* Modules/Projects/Tool/PCToolProject.m
	  shutup clang compiler warning about redunant literal
	  string usage
	* Modules/Preferences/Build/PCBuildPrefs.m
	* Framework/PCButton.m
	* Modules/Parsers/ProjectCenter/ObjCMethodHandler.m
	  shutup some clang warnings
	* Framework/PCProjectBrowser.m
	  NSInteger conversions
	* Modules/Debuggers/ProjectCenter/PTYView.m
	  Include right headers for openpty on OpenBSD

2012-11-22  German Arias <german@xelalug.org>

	* Modules/Projects/Library/PCLibProject.m: Don't add the prefix "lib"
	to LIBRARY_NAME, gnustep-make will add this prefix anyway. On the other
	hand, the super class isn't able to add this prefix to
	XXX_RESOURCE_FILES at GNUmakefile.

2012-08-30 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PTYView.m
	Do not include stropts.h for most OS's anymore.

2012-08-09 Riccardo Mottola <rm@gnu.org>

	* English.lproj/ProjectCenter.gorm
	* Framework/PCProjectManager.m
	Recent Document menu support.

2012-07-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Framework/PCProjectBuilder.m (-line:startsWithString:,
	-parseErrorLine:):
	* Modules/Editors/ProjectCenter/PCEditor.h:
	* Modules/Editors/ProjectCenter/PCEditor.m (FindDelimiterInString,
	-highlightCharacterAt:inEditor:): Fix for compilation on 64-bit
	hosts.

2012-07-09  Serg Stoyan  <stoyan255@ukr.net>
